# Rosetta-Transformer-for-Antiquity

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.cuda  IMPLEMENTATION_SUMMARY.md  LICENSE  MYPY_FIXES_SUMMARY.md  Makefile  QUICK_REFERENCE.md  README.md  SECURITY.md  SUPPORT.md  UTILS_README.md  examples_utils_usage.py  fix_all_61_errors.py  fix_remaining_errors.py  pyproject.toml  requirements-dev.in  requirements.in
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
configs/: README.md  config.example.yaml
docker/: Dockerfile.cpu  README.md
docs/implementation/: IMPLEMENTATION_SUMMARY.md
docs/reference/: QUICK_REFERENCE.md  UTILS_README.md
examples/: README.md  examples_utils_usage.py
rosetta/: cli.py
rosetta/api/: feedback.py  inference.py  main.py  search.py
rosetta/data/: __init__.py  alignment.py  annotation.py  cleaning.py  corpus.py  schemas.py
rosetta/evaluation/: __init__.py  metrics.py  validators.py
rosetta/models/: __init__.py  base.py  pretraining.py  seq2seq.py  token_tasks.py
rosetta/utils/: __init__.py  config.py  logging.py  reproducibility.py
scripts/fixes/: README.md  fix_all_61_errors_part2.py  fix_all_mypy_errors.py  fix_remaining_errors.py  mypy_fixes.py
